--- a/locales/ru.json
+++ b/locales/ru.json
@@ -1,14 +1,14 @@
 {
- "login": {
-  "title": "Авторизация",
-  "btn": "Войти"
- },
- "register": {
-  "title": "Регистрация",
-  "btn": "Создать аккаунт"
- },
- "profile": {
-  "title": "Профайл",
-  "btn": "Выйти"
- }
+  "login": {
+    "title": "Логин",
+    "btn": "Войти"
+  },
+  "register": {
+    "title": "Регистрация",
+    "btn": "Создать аккаунт"
+  },
+  "profile": {
+    "title": "Профайл",
+    "btn": "Выйти"
+  }
 }
